--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,6 @@
   "manifest_version": 3,
   "action": {
     "default_popup": "popup/popup.html",
-    "default_icon": "temp-logo.png"
+    "default_icon": "images/temp-logo.png"
   }
 }
