Added Element Highlighter Function
Website elements will now be highlighted in red at all times while script is enabled

--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,14 @@
     "service_worker": "scripts/background.js"
   },
 
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["scripts/highlighter.js"],
+      "css": ["scripts/highlighter.css"]
+    }
+  ],
+
   "commands": {
     "Element_Selection_State": {
       "suggested_key": { 
