--- a/manifest.json
+++ b/manifest.json
@@ -18,8 +18,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["scripts/highlighter.js"],
-      "css": ["scripts/highlighter.css"]
+      "js": ["scripts/highlighter/highlighter.js"],
+      "css": ["scripts/highlighter/highlighter.css"]
     }
   ],
 
