--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "default_icon": "images/temp-logo.png"
   },
 
-  "permissions": [ "scripting" ],
+  "permissions": [ "tabs", "scripting" ],
 
   "background": {
     "service_worker": "scripts/background.js"
