--- a/backend/package.json
+++ b/backend/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/GevChalikyan/Curio/issues"
   },
-  "homepage": "https://github.com/GevChalikyan/Curio#readme"
+  "homepage": "https://github.com/GevChalikyan/Curio#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0"
+  }
 }
