--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/GevChalikyan/Curio#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "pg": "^8.15.6"
   }
 }
