Added More Permissions

--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -13,7 +13,12 @@
     "default_icon": "images/Curio-logo.png"
   },
 
-  "permissions": [ "tabs", "scripting" ],
+  "permissions": [ 
+    "activeTab",
+    "commands",
+    "tabs", 
+    "scripting" 
+  ],
 
   "background": {
     "service_worker": "scripts/background.js"
