--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -5,7 +5,7 @@
   "manifest_version": 3,
 
   "host_permissions": [
-    "https://curio-backend-d13s.onrender.com/*"
+    "https://curio-backend-d13s.onrender.com/*", "<all_urls>"
   ],
 
   "action": {
@@ -13,7 +13,7 @@
     "default_icon": "images/temp-logo.png"
   },
 
-  "permissions": [ "tabs", "scripting" ],
+  "permissions": [ "tabs", "scripting", "contextMenus"],
 
   "background": {
     "service_worker": "scripts/background.js"
@@ -22,7 +22,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["scripts/highlighter/highlighter.js"],
+      "js": ["scripts/highlighter/highlighter.js", "popup/popup_2.js"],
       "css": ["scripts/highlighter/highlighter.css"]
     }
   ],
