--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "build": "echo \"Nothing to build\""    
+    "build": "echo \"No build step required\""    
   },
   
   "repository": {
