--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7",
-    "pg": "^8.15.6"
+    "pg": "^8.15.6",
+    "node-fetch": "^2.6.7"
   }
 }
