Implemented sending messages through text box
-Separated the sendMessege function to its own script and updated manifest to include it
-Added a listener to the popup box when you hit enter
-Added a short preamble to messages we send to the  backend to limit the length of the response from the LLM

--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -22,7 +22,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["scripts/highlighter/highlighter.js", "popup/popup_2.js"],
+      "js": ["scripts/highlighter/highlighter.js", "popup/popup_2.js", "scripts/BackendCall.js"],
       "css": ["scripts/highlighter/highlighter.css"]
     }
   ],
