Moved Background.js

--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -22,7 +22,7 @@
   ],
 
   "background": {
-    "service_worker": "src/scripts/background.js"
+    "service_worker": "src/background.js"
   },
 
   "content_scripts": [
