Revert "Merge branch 'merge-frontend' into develop-Timothy-Eng"
This reverts commit b2fd5ac64cbd2151ae39f22fb9647d2076fb102b, reversing
changes made to 4c7a5630e692d343b89261c9aa9028de91a3b4f6.

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "build": "echo \"No build step required\""    
+    "test": "echo \"Hello, World!\" && exit 1",
+    "start": "node src/server.js"
   },
-  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GevChalikyan/Curio.git"
@@ -26,7 +25,6 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "path": "^0.12.7",
-    "pg": "^8.15.6",
-    "node-fetch": "^2.6.7"
+    "pg": "^8.15.6"
   }
 }
