--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,8 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "build": "echo \"No build step required\""    
+    "build": "echo \"No build step required\""
   },
-  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GevChalikyan/Curio.git"
@@ -19,14 +18,14 @@
   },
   "homepage": "https://github.com/GevChalikyan/Curio#readme",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^2.6.7",
     "path": "^0.12.7",
-    "pg": "^8.15.6",
-    "node-fetch": "^2.6.7"
+    "pg": "^8.15.6"
   }
 }
